--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply bg-[#F2F2F2] text-gray-900;
+}
+
+.dark body {
+    @apply bg-gray-900 text-white;
+}
